--- a/assigment_3_operators_Pratik_Kapare.ipynb
+++ b/assigment_3_operators_Pratik_Kapare.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'ashutosh', 'age': 25, 'city': 'kolhapur'}"
+       "{'name': 'pratik', 'age': 25, 'city': 'kolhapur'}"
       ]
      },
      "execution_count": 2,
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "dict={\"name\":\"ashutosh\",\"age\":25,\"city\":\"kolhapur\"}\n",
+    "dict={\"name\":\"pratik\",\"age\":25,\"city\":\"kolhapur\"}\n",
     "dict"
    ]
   },
