--- a/assigment_3_operators_Pratik_Kapare.ipynb
+++ b/assigment_3_operators_Pratik_Kapare.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "dict={\"name\":\"ashutosh\",\"age\":25,\"city\":\"kolhapur\"}\n",
+    "dict={\"name\":\"pratik\",\"age\":25,\"city\":\"kolhapur\"}\n",
     "dict.get(\"city\")"
    ]
   },
